# figure-cli

./: .fig.toml.example  .gitignore  Cargo.toml  README.md
.github/workflows/: build_and_test.yml  release.yml  security_audit.yml
src/: config.rs  consts.rs  main.rs  runner.rs  util.rs
template/: config.toml.example  kubectl-port-forward-remote-host.sh.template  pgbouncer.toml.template
