[package]
name = "figcli"
version = "0.6.1"
authors = ["Stephen Cirner <scirner@figure.com>"]
edition = "2018"
description = "A command line tool that provides utility functions for developing at Figure."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
dirs = "3.0"
getch = "0.2.1"
prettytable-rs = "0.8"
quick-error = "2.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
uuid = { version = "0.8", features = ["v4"] }
walkdir = "2"
