[package]
name = "figcli"
version = "0.11.0"
authors = ["Stephen Cirner <scirner@figure.com>", "Mike Woods <mwoods@figure.com>"]
edition = "2018"
description = "A command line tool that provides utility functions for developing at Figure."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
clap = "2.33"
dirs = "4.0"
getch = "0.3"
prettytable-rs = "0.8"
quick-error = "2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
uuid = { version = "1.0", features = ["v4"] }
walkdir = "2"
